sumo/tests/duarouter/errors/network/edge/cedge/root__edge__cedge#id__ungiven1/errors.duarouter
Error: At edge '1': a succeding edge has no id.
Quitting (on error).
